--- a/readme.html
+++ b/readme.html
@@ -93,4 +93,9 @@ setting the "obvious" parameters). When the batch of simulations
 finishes and graph window will appear: right-click on this and set
 "View=plot" to see the calcium versus "number of synapses" curve (see
 e.g. Figure 2).
+
+20150524 Update from Ted Carnevale: Changed integration method from
+euler to derivimplicit which is appropriate for simple ion
+accumulation mechanisms.  See Integration methods for SOLVE statements
+http://www.neuron.yale.edu/phpBB/viewtopic.php?f=28&t=592
 </pre></html>
