--- a/readme.html
+++ b/readme.html
@@ -98,4 +98,7 @@ e.g. Figure 2).
 euler to derivimplicit which is appropriate for simple ion
 accumulation mechanisms.  See Integration methods for SOLVE statements
 http://www.neuron.yale.edu/phpBB/viewtopic.php?f=28&t=592
+
+20220523 Updated MOD files to contain valid C++ and be compatible with
+the upcoming versions 8.2 and 9.0 of NEURON.
 </pre></html>
